<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:id="@+id/BLinearLayoutIndex"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="com.systex.bingo.SmallBingoActivity" >

        <TextView
            android:id="@+id/BtextView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/lines"
            android:textColor="@color/Orange"
            android:textSize="40sp" />

        <ImageView
            android:id="@+id/BimgBingo"
            android:layout_width="match_parent"
            android:layout_height="@dimen/image_height"
            android:layout_marginTop="30dp"
            android:src="@drawable/bingo"
            android:visibility="gone" />

        <LinearLayout
            android:id="@+id/BLinearLayout01"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:gravity="center_horizontal" >

            <Button
                android:id="@+id/BButton01"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                android:background="@color/Green"
                android:text="@string/input"
                android:textColor="@android:color/black" />

            <Button
                android:id="@+id/BButton02"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                android:background="@color/Green"
                android:text="@string/input" />

            <Button
                android:id="@+id/BButton03"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                android:background="@color/Green"
                android:text="@string/input" />

            <Button
                android:id="@+id/BButton04"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                android:background="@color/Green"
                android:text="@string/input" />

            <Button
                android:id="@+id/BButton05"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                android:background="@color/Green"
                android:text="@string/input" />

        </LinearLayout>

          <LinearLayout
              android:id="@+id/BLinearLayout02"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:gravity="center_horizontal" >

            <Button
                android:id="@+id/BButton06"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                android:background="@color/Green"
                android:text="@string/input"
                android:textColor="@android:color/black" />

            <Button
                android:id="@+id/BButton07"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                android:background="@color/Green"
                android:text="@string/input" />

            <Button
                android:id="@+id/BButton08"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                android:background="@color/Green"
                android:text="@string/input" />

            <Button
                android:id="@+id/BButton09"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                android:background="@color/Green"
                android:text="@string/input" />

            <Button
                android:id="@+id/BButton10"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                android:background="@color/Green"
                android:text="@string/input" />

        </LinearLayout>

         <LinearLayout
             android:id="@+id/BLinearLayout03"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center_horizontal" >

            <Button
                android:id="@+id/BButton11"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                android:background="@color/Green"
                android:text="@string/input"
                android:textColor="@android:color/black" />

            <Button
                android:id="@+id/BButton12"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                android:background="@color/Green"
                android:text="@string/input" />

            <Button
                android:id="@+id/BButton13"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                android:background="@color/Green"
                android:text="@string/input" />

            <Button
                android:id="@+id/BButton14"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                android:background="@color/Green"
                android:text="@string/input" />

            <Button
                android:id="@+id/BButton15"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                android:background="@color/Green"
                android:text="@string/input" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/BLinearLayout04"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal" >

            <Button
                android:id="@+id/BButton16"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                android:background="@color/Green"
                android:text="@string/input"
                android:textColor="@android:color/black" />

            <Button
                android:id="@+id/BButton17"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                android:background="@color/Green"
                android:text="@string/input" />

            <Button
                android:id="@+id/BButton18"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                android:background="@color/Green"
                android:text="@string/input" />

            <Button
                android:id="@+id/BButton19"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                android:background="@color/Green"
                android:text="@string/input" />

            <Button
                android:id="@+id/BButton20"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                android:background="@color/Green"
                android:text="@string/input" />

        </LinearLayout>
        
                <LinearLayout
                    android:id="@+id/BLinearLayout05"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal" >

            <Button
                android:id="@+id/BButton21"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                android:background="@color/Green"
                android:text="@string/input"
                android:textColor="@android:color/black" />

            <Button
                android:id="@+id/BButton22"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                android:background="@color/Green"
                android:text="@string/input" />

            <Button
                android:id="@+id/BButton23"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                android:background="@color/Green"
                android:text="@string/input" />

            <Button
                android:id="@+id/BButton24"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                android:background="@color/Green"
                android:text="@string/input" />

            <Button
                android:id="@+id/BButton25"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                android:background="@color/Green"
                android:text="@string/input" />

        </LinearLayout>

        <Switch
            android:id="@+id/BSwitch1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/gamemode" />

        <LinearLayout
            android:id="@+id/BLinearLayout06"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:gravity="center_horizontal" >

            <Button
                android:id="@+id/BButtonRandom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:background="@color/Yellow"
                android:text="@string/random" />

            <Button
                android:id="@+id/BButtonInit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:background="@color/Purple"
                android:text="@string/init" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>